--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,9 @@
 <div class="d-flex align-items-center justify-content-center">
   <h3>Welcome to our Home Page</h3>
+
+  <% if @user %>
+    Logged in as: <%= @user.email %>
+
+    <%= button_to "Logout", logout_path, method: :delete, class: "btn btn-dark" %>
+  <% end %>
 </div>
