--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Sign Up</h1>
+<h1>Edit Password</h1>
 
-<%= form_with model: Current.user, url: sign_up_path, local: true, data: { turbo: false } do |form| %>
+<%= form_with model: Current.user, url: edit_password_path, local: true, data: { turbo: false } do |form| %>
   <% if form.object.errors.any? %>
     <div class="alert alert-danger">
       <% form.object.errors.full_messages.each do |message| %>
@@ -8,10 +8,6 @@
       <% end %>
     </div>
   <% end %>
-  <div class="mb-3">
-    <%= form.label :email %>
-    <%= form.text_field :email, class:"form-control", placeholder: "mitr9@gmail.com.sb" %>
-  </div>
 
   <div class="mb-3">
     <%= form.label :password %>
@@ -24,6 +20,6 @@
   </div>
 
   <div class="mb-3">
-    <%= form.submit "Sign Up!", class: "btn btn-dark" %>
+    <%= form.submit "Update Password", class: "btn btn-dark" %>
   </div>
 <% end %>
