--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,5 @@
 <div class="d-flex align-items-center justify-content-center">
   <h3>Welcome to our Home Page</h3>
 </div>
+
+<%= button_to "Connect Twitter", "/auth/twitter", method: :post, class: "btn btn-dark" %>
